# coffeeAgntcy

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FORK.md  HACKATHON.md  README.md  TUTORIAL.md  index.html
coffeeAGNTCY/coffee_agents/recruiter/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
coffeeAGNTCY/coffee_agents/recruiter/claude-code-recruiter/: .gitignore  README.md
coffeeAGNTCY/coffee_agents/recruiter/claude-code-recruiter/plugin/.claude-plugin/: plugin.json
coffeeAGNTCY/coffee_agents/recruiter/claude-code-recruiter/plugin/docs/: telemetry.md
coffeeAGNTCY/coffee_agents/recruiter/claude-code-recruiter/plugin/hooks/: hooks.json
coffeeAGNTCY/coffee_agents/recruiter/claude-code-recruiter/plugin/scripts/: otel-emit.sh  post-bash-tool.sh  subagent-start.sh  subagent-stop.sh
coffeeAGNTCY/coffee_agents/recruiter/claude-code-recruiter/plugin/skills/a2a-protocol/: SKILL.md
coffeeAGNTCY/coffee_agents/recruiter/cli-agent-integrations/claude-code/: .env.example  README.md
coffeeAGNTCY/coffee_agents/recruiter/cli-agent-integrations/claude-code/plugin/.claude-plugin/: plugin.json
coffeeAGNTCY/coffee_agents/recruiter/cli-agent-integrations/claude-code/plugin/commands/: a2a-send.md  check-identity.md  recruit.md
coffeeAGNTCY/coffee_agents/recruiter/cli-agent-integrations/claude-code/plugin/scripts/: skill-template.md
coffeeAGNTCY/coffee_agents/recruiter/docker/: docker-compose.yaml
coffeeAGNTCY/coffee_agents/recruiter/docker/configs/dir/: apiserver.env
coffeeAGNTCY/coffee_agents/recruiter/docs/: architecture.mmd
coffeeAGNTCY/coffee_agents/recruiter/src/: agent.py
coffeeAGNTCY/coffee_agents/recruiter/src/agent_recruiter/agent_registries/: __init__.py  registry_search_agent.py
coffeeAGNTCY/coffee_agents/recruiter/src/agent_recruiter/common/: agent_utils.py  llm.py  logging.py
coffeeAGNTCY/coffee_agents/recruiter/src/agent_recruiter/interviewers/: __init__.py  agent_evaluator.py  base_evaluator_agent.py  evaluator_agent_factory.py  models.py  policy_evaluation.py
coffeeAGNTCY/coffee_agents/recruiter/src/agent_recruiter/models/: recruiter_models.py
coffeeAGNTCY/coffee_agents/recruiter/src/agent_recruiter/plugins/: cache_config.py
coffeeAGNTCY/coffee_agents/recruiter/src/agent_recruiter/recruiter/: __init__.py  recruiter.py
coffeeAGNTCY/coffee_agents/recruiter/src/agent_recruiter/server/: agent_executor.py  card.py  request_handler.py  server.py
coffeeAGNTCY/coffee_agents/recruiter/test/integration/: benchmark_caching.py  conftest.py  test_a2a.py  test_agent_evaluator.py  test_caching.py
coffeeAGNTCY/coffee_agents/recruiter/test/sample_agent/: sample_agent_record.json  server.py
coffeeAGNTCY/coffee_agents/recruiter/tests/: conftest.py
coffeeAGNTCY/coffee_agents/recruiter/tests/integration/: conftest.py  test_a2a.py  test_agent_evaluator.py  test_caching.py
coffeeAGNTCY/coffee_agents/recruiter/tests/integration_llm/: conftest.py  test_agent_evaluator.py  test_caching.py
coffeeAGNTCY/coffee_agents/recruiter/tests/sample-agents/: card_translation.py  upload_cards.py
coffeeAGNTCY/coffee_agents/recruiter/tests/sample-agents/hello_world/: Dockerfile  __main__.py  agent.py  agent_executor.py  oasf_record.json  pyproject.toml
coffeeAGNTCY/coffee_agents/recruiter/tests/services/: docker-compose.yaml
coffeeAGNTCY/coffee_agents/recruiter/tests/unit/: test_agent_evaluator.py  test_marker_coverage.py  test_recruitment_criteria_from_prompt.py
coffeeAGNTCY/dir-mcp-server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
coffeeAGNTCY/dir-mcp-server/docs/: CONFIGURATION.md  QUICKREF.md  SPIRE_AGENT_INSTALLATION.md  SPIRE_SETUP.md
coffeeAGNTCY/dir-mcp-server/tests/: test_client.py  test_mcp_complete.py  test_mcp_crossnode.py  test_remote.py
(+1169 files in other folders)
