[project]
name = "dir-mcp-server"
version = "0.1.0"
description = "MCP server for AGNTCY Directory with multi-node support"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.0",
    "agntcy-dir==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
