[project]
name = "agent-recruiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "a2a-sdk==0.3.20",
    "mcp>=1.24.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "litellm==1.82.1",
    "langchain-litellm==0.3.5",
    "langchain-anthropic>=0.3.13",
    "langchain-google-genai>=2.1.4",
    "langchain-openai>=0.3.16",
    "agntcy-app-sdk==0.5.5",
    "slim-bindings==1.1.0",
    "google-adk>=1.0.0",
    "rogue-ai-sdk>=0.3.4",
    "pydantic-yaml>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-repeat==0.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[tool.uv]
exclude-newer = "28 days"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_recruiter"]

[tool.pytest.ini_options]
addopts = "--asyncio-mode=auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error",
    # google-adk runners.py:1481 reads RunConfig.save_input_blobs_as_artifacts (deprecated).
    # Warning attributed to google.adk.runners. Remove when ADK stops using it.
    "ignore:deprecated:DeprecationWarning:google.adk.runners",
    # google-adk mcp_toolset.py:181 still uses MCPTool (deprecated); should use McpTool. Remove when ADK is updated.
    "ignore:MCPTool class is deprecated:DeprecationWarning:google.adk.tools.mcp_tool.mcp_tool",
    # google-adk emits experimental-feature notices (PLUGGABLE_AUTH, JSON_SCHEMA_FOR_FUNC_DECL, ...).
    "ignore:.*FeatureName.* is enabled:UserWarning",
    # a2a-sdk's starlette app references a deprecated HTTP status alias. Remove when a2a-sdk updates.
    "ignore:'HTTP_413_REQUEST_ENTITY_TOO_LARGE' is deprecated:DeprecationWarning",
    # litellm's async logging coroutine is GC'd unawaited under the test event loop.
    "ignore:.*async_success_handler:pytest.PytestUnraisableExceptionWarning",
]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest-asyncio>=1.3.0"]
